app/database.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    color: red
    run: database
  name: database
  namespace: app
spec:
  containers:
    - image: nginx
      name: database
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
