app/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: frontend
    color: blue
  name: frontend
  namespace: app
spec:
  containers:
    - image: nginx
      name: frontend
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
